- tagsinput IE7 fix - timeline on IE date fix w

--- a/rails_app/app/assets/stylesheets/timeline_entries.css.scss
+++ b/rails_app/app/assets/stylesheets/timeline_entries.css.scss
@@ -296,6 +296,7 @@ z-index:10;
 .tm-hg-holder {
 	position:absolute;
 	left:0px;
+	top:0px;
 }
 
 .tm-vgroup {
